<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="mg.governmentofindia.ShareActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/orange"
        android:onClick="shareOnFacebook"
        android:text="@string/string23"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:background="@color/orange"
        android:onClick="shareOnTwitter"
        android:text="@string/string24"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/string25"
        android:gravity="center" />

</RelativeLayout>
